--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "vuejs-dialog": "^1.4.1",
         "vuetify": "^2.2.21",
         "vuex": "^3.1.3",
+        "vuex-i18n": "^1.13.1",
         "vuex-router-sync": "^5.0.0"
     }
 }
