--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -8,6 +8,7 @@
     "/dist/auth-login.js": "/dist/auth-login.js",
     "/dist/auth-reset-password.js": "/dist/auth-reset-password.js",
     "/dist/home.js": "/dist/home.js",
+    "/dist/plugins.js": "/dist/plugins.js",
     "/dist/profile.js": "/dist/profile.js",
     "/dist/user-permission-form.js": "/dist/user-permission-form.js",
     "/dist/user-permission-index.js": "/dist/user-permission-index.js",
@@ -16,50 +17,12 @@
     "/dist/user-users-form.js": "/dist/user-users-form.js",
     "/dist/user-users-index.js": "/dist/user-users-index.js",
     "/dist/user-users-view.js": "/dist/user-users-view.js",
+    "/dist/vendors~plugins.js": "/dist/vendors~plugins.js",
     "/dist/vendors~user-permission-index~user-role-index~user-users-index.js": "/dist/vendors~user-permission-index~user-role-index~user-users-index.js",
     "/dist/vue.js": "/dist/vue.js",
-    "/dist/app.d3d839cec09074783c5b.hot-update.js": "/dist/app.d3d839cec09074783c5b.hot-update.js",
-    "/dist/vuetify.d3d839cec09074783c5b.hot-update.js": "/dist/vuetify.d3d839cec09074783c5b.hot-update.js",
-    "/dist/app.068c8419bd73089c5e93.hot-update.js": "/dist/app.068c8419bd73089c5e93.hot-update.js",
-    "/dist/plugins.js": "/dist/plugins.js",
-    "/dist/vendors~plugins.js": "/dist/vendors~plugins.js",
-    "/user-permission-index.855f981a64faf3830928.hot-update.js": "/user-permission-index.855f981a64faf3830928.hot-update.js",
-    "/user-role-index.855f981a64faf3830928.hot-update.js": "/user-role-index.855f981a64faf3830928.hot-update.js",
-    "/user-users-index.855f981a64faf3830928.hot-update.js": "/user-users-index.855f981a64faf3830928.hot-update.js",
-    "/user-users-index.ef999c87e2c4bbfef2b4.hot-update.js": "/user-users-index.ef999c87e2c4bbfef2b4.hot-update.js",
-    "/user-permission-index.41ebbf8155a756d1733b.hot-update.js": "/user-permission-index.41ebbf8155a756d1733b.hot-update.js",
-    "/user-role-index.9f220c302e0124df3697.hot-update.js": "/user-role-index.9f220c302e0124df3697.hot-update.js",
-    "/plugins.86e74ecabebb0efcb693.hot-update.js": "/plugins.86e74ecabebb0efcb693.hot-update.js",
-    "/plugins.fd6cfa8d9d5836a4db7a.hot-update.js": "/plugins.fd6cfa8d9d5836a4db7a.hot-update.js",
-    "/user-users-index.512feccb18fbd96b1705.hot-update.js": "/user-users-index.512feccb18fbd96b1705.hot-update.js",
-    "/user-permission-index.ed332041f29fd1445f05.hot-update.js": "/user-permission-index.ed332041f29fd1445f05.hot-update.js",
-    "/user-role-index.9a65c2bea1aa23cbad8e.hot-update.js": "/user-role-index.9a65c2bea1aa23cbad8e.hot-update.js",
-    "/plugins.fac4f6b96e124953077a.hot-update.js": "/plugins.fac4f6b96e124953077a.hot-update.js",
-    "/vendors~plugins.fac4f6b96e124953077a.hot-update.js": "/vendors~plugins.fac4f6b96e124953077a.hot-update.js",
-    "/plugins.8052994aa0c1bd48cc3a.hot-update.js": "/plugins.8052994aa0c1bd48cc3a.hot-update.js",
-    "/plugins.c4253645297733e6d341.hot-update.js": "/plugins.c4253645297733e6d341.hot-update.js",
-    "/plugins.a3723b45d3c1565c89f7.hot-update.js": "/plugins.a3723b45d3c1565c89f7.hot-update.js",
-    "/plugins.087d6597d616af548ffb.hot-update.js": "/plugins.087d6597d616af548ffb.hot-update.js",
-    "/plugins.513d64e347a077feccee.hot-update.js": "/plugins.513d64e347a077feccee.hot-update.js",
-    "/plugins.8b61d1e336610948c330.hot-update.js": "/plugins.8b61d1e336610948c330.hot-update.js",
-    "/dist/app.3d6f7f14a987e1b071f9.hot-update.js": "/dist/app.3d6f7f14a987e1b071f9.hot-update.js",
-    "/dist/app.546a6c792408924b72ed.hot-update.js": "/dist/app.546a6c792408924b72ed.hot-update.js",
-    "/dist/app.c44dd8a5aed2c44bd180.hot-update.js": "/dist/app.c44dd8a5aed2c44bd180.hot-update.js",
-    "/dist/app.1a73d2479c3237ee4945.hot-update.js": "/dist/app.1a73d2479c3237ee4945.hot-update.js",
-    "/dist/app.121cd0f335e80673a39b.hot-update.js": "/dist/app.121cd0f335e80673a39b.hot-update.js",
-    "/dist/app.6433bb0a2bf7e299af16.hot-update.js": "/dist/app.6433bb0a2bf7e299af16.hot-update.js",
-    "/dist/app.74a88375054098b0ba28.hot-update.js": "/dist/app.74a88375054098b0ba28.hot-update.js",
-    "/dist/app.844d1fce0c8a275af53c.hot-update.js": "/dist/app.844d1fce0c8a275af53c.hot-update.js",
-    "/dist/app.f9df92bef728e75f6eaf.hot-update.js": "/dist/app.f9df92bef728e75f6eaf.hot-update.js",
-    "/dist/app.9cf55a0f3c0cdcf2bbf4.hot-update.js": "/dist/app.9cf55a0f3c0cdcf2bbf4.hot-update.js",
-    "/plugins.9cf55a0f3c0cdcf2bbf4.hot-update.js": "/plugins.9cf55a0f3c0cdcf2bbf4.hot-update.js",
-    "/vendors~plugins.9cf55a0f3c0cdcf2bbf4.hot-update.js": "/vendors~plugins.9cf55a0f3c0cdcf2bbf4.hot-update.js",
-    "/dist/app.61324352049851e1d6e6.hot-update.js": "/dist/app.61324352049851e1d6e6.hot-update.js",
-    "/dist/app.30dfc2f2ffda91e26e1f.hot-update.js": "/dist/app.30dfc2f2ffda91e26e1f.hot-update.js",
-    "/dist/app.bd51b17ec39ef3952203.hot-update.js": "/dist/app.bd51b17ec39ef3952203.hot-update.js",
-    "/dist/app.54f870de28b5752b2ccb.hot-update.js": "/dist/app.54f870de28b5752b2ccb.hot-update.js",
-    "/dist/app.dca38a805dc37a447b8d.hot-update.js": "/dist/app.dca38a805dc37a447b8d.hot-update.js",
-    "/dist/app.1fdeb38669867ac0373b.hot-update.js": "/dist/app.1fdeb38669867ac0373b.hot-update.js",
-    "/dist/app.3dfa4254172f58684c5d.hot-update.js": "/dist/app.3dfa4254172f58684c5d.hot-update.js",
-    "/dist/app.38decf4892f25a7fd6a7.hot-update.js": "/dist/app.38decf4892f25a7fd6a7.hot-update.js"
+    "/dist/vuetify.a12e1193dd268f56d458.hot-update.js": "/dist/vuetify.a12e1193dd268f56d458.hot-update.js",
+    "/auth-login.a12e1193dd268f56d458.hot-update.js": "/auth-login.a12e1193dd268f56d458.hot-update.js",
+    "/auth-login.205aa0643e721f5f54aa.hot-update.js": "/auth-login.205aa0643e721f5f54aa.hot-update.js",
+    "/auth-login.b264c7cc71028e7db812.hot-update.js": "/auth-login.b264c7cc71028e7db812.hot-update.js",
+    "/auth-login.97bf432982adc097d103.hot-update.js": "/auth-login.97bf432982adc097d103.hot-update.js"
 }
