--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -62,5 +62,10 @@
     "/user-users-form.ac6033280f6bd1f08cde.hot-update.js": "/user-users-form.ac6033280f6bd1f08cde.hot-update.js",
     "/user-users-form.437791dffd2fe5b3168f.hot-update.js": "/user-users-form.437791dffd2fe5b3168f.hot-update.js",
     "/user-role-form.17c9d55d58b30f12c531.hot-update.js": "/user-role-form.17c9d55d58b30f12c531.hot-update.js",
-    "/user-users-form.89b3e62cb402ed4a0144.hot-update.js": "/user-users-form.89b3e62cb402ed4a0144.hot-update.js"
+    "/user-users-form.89b3e62cb402ed4a0144.hot-update.js": "/user-users-form.89b3e62cb402ed4a0144.hot-update.js",
+    "/user-users-view.f7a81a61fcec2ea241f6.hot-update.js": "/user-users-view.f7a81a61fcec2ea241f6.hot-update.js",
+    "/user-users-view.e02df20cff9bc16c1ee4.hot-update.js": "/user-users-view.e02df20cff9bc16c1ee4.hot-update.js",
+    "/user-users-view.760c9a436aa3f26dfaaf.hot-update.js": "/user-users-view.760c9a436aa3f26dfaaf.hot-update.js",
+    "/user-users-view.a86b6df529348affdf06.hot-update.js": "/user-users-view.a86b6df529348affdf06.hot-update.js",
+    "/user-users-view.8a6f388621b40e490924.hot-update.js": "/user-users-view.8a6f388621b40e490924.hot-update.js"
 }
