--- a/package.json
+++ b/package.json
@@ -5,19 +5,22 @@
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "npm run development -- --watch",
         "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --inline --progress --colors --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
         "cross-env": "^7.0",
+        "css-loader": "^3.5.2",
         "deepmerge": "^4.2.2",
         "fibers": "^4.0.2",
         "laravel-mix": "^5.0.1",
         "mini-css-extract-plugin": "^0.9.0",
+        "moment-locales-webpack-plugin": "^1.2.0",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.26.3",
         "sass-loader": "^8.0.2",
+        "style-loader": "^1.1.3",
         "typescript": "^3.8.3",
         "vue-template-compiler": "^2.6.10"
     },
