--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
     "/dist/app.js": "/dist/app.js",
-    "/dist/app.css": "/dist/app.css",
+    "/dist/main.css": "/dist/main.css",
     "/dist/vuetify.css": "/dist/vuetify.css",
     "/dist/vuetify.js": "/dist/vuetify.js",
     "/dist/auth-forgotten-password.js": "/dist/auth-forgotten-password.js",
@@ -19,53 +19,7 @@
     "/dist/user-users-view.js": "/dist/user-users-view.js",
     "/dist/vendors~plugins.js": "/dist/vendors~plugins.js",
     "/dist/vendors~user-permission-index~user-role-index~user-users-index.js": "/dist/vendors~user-permission-index~user-role-index~user-users-index.js",
+    "/dist/moment.js": "/dist/moment.js",
     "/dist/vue.js": "/dist/vue.js",
-    "/dist/vuetify.a12e1193dd268f56d458.hot-update.js": "/dist/vuetify.a12e1193dd268f56d458.hot-update.js",
-    "/auth-login.a12e1193dd268f56d458.hot-update.js": "/auth-login.a12e1193dd268f56d458.hot-update.js",
-    "/auth-login.205aa0643e721f5f54aa.hot-update.js": "/auth-login.205aa0643e721f5f54aa.hot-update.js",
-    "/auth-login.b264c7cc71028e7db812.hot-update.js": "/auth-login.b264c7cc71028e7db812.hot-update.js",
-    "/auth-login.97bf432982adc097d103.hot-update.js": "/auth-login.97bf432982adc097d103.hot-update.js",
-    "/dist/app.d5d401c3ad834e034d07.hot-update.js": "/dist/app.d5d401c3ad834e034d07.hot-update.js",
-    "/dist/app.917e5591074b42d0bc9b.hot-update.js": "/dist/app.917e5591074b42d0bc9b.hot-update.js",
-    "/dist/app.6682276bc84a4c2b4179.hot-update.js": "/dist/app.6682276bc84a4c2b4179.hot-update.js",
-    "/dist/app.a66cfdab716675f7a0ca.hot-update.js": "/dist/app.a66cfdab716675f7a0ca.hot-update.js",
-    "/dist/app.dd77fdbba5dafb75aba8.hot-update.js": "/dist/app.dd77fdbba5dafb75aba8.hot-update.js",
-    "/user-permission-index.ed039f21647c28ad632d.hot-update.js": "/user-permission-index.ed039f21647c28ad632d.hot-update.js",
-    "/user-permission-index.cdd935343f8f26028b3a.hot-update.js": "/user-permission-index.cdd935343f8f26028b3a.hot-update.js",
-    "/user-role-index.cdd935343f8f26028b3a.hot-update.js": "/user-role-index.cdd935343f8f26028b3a.hot-update.js",
-    "/user-users-index.cdd935343f8f26028b3a.hot-update.js": "/user-users-index.cdd935343f8f26028b3a.hot-update.js",
-    "/user-permission-index.c4f89faf226191aff7b2.hot-update.js": "/user-permission-index.c4f89faf226191aff7b2.hot-update.js",
-    "/user-permission-index.e745f68e3241d2f008c3.hot-update.js": "/user-permission-index.e745f68e3241d2f008c3.hot-update.js",
-    "/user-role-index.e745f68e3241d2f008c3.hot-update.js": "/user-role-index.e745f68e3241d2f008c3.hot-update.js",
-    "/user-users-index.e745f68e3241d2f008c3.hot-update.js": "/user-users-index.e745f68e3241d2f008c3.hot-update.js",
-    "/user-permission-index.66349f594609d1bb8379.hot-update.js": "/user-permission-index.66349f594609d1bb8379.hot-update.js",
-    "/user-permission-index.5a094292c9b5ae78aea0.hot-update.js": "/user-permission-index.5a094292c9b5ae78aea0.hot-update.js",
-    "/user-permission-index.47afc3242c875c61e72b.hot-update.js": "/user-permission-index.47afc3242c875c61e72b.hot-update.js",
-    "/user-permission-index.caf611d4db042983dd84.hot-update.js": "/user-permission-index.caf611d4db042983dd84.hot-update.js",
-    "/user-role-index.caf611d4db042983dd84.hot-update.js": "/user-role-index.caf611d4db042983dd84.hot-update.js",
-    "/user-users-index.caf611d4db042983dd84.hot-update.js": "/user-users-index.caf611d4db042983dd84.hot-update.js",
-    "/user-permission-index.4a3eeaba299bbe3f4732.hot-update.js": "/user-permission-index.4a3eeaba299bbe3f4732.hot-update.js",
-    "/user-role-index.cb94286c599b14395616.hot-update.js": "/user-role-index.cb94286c599b14395616.hot-update.js",
-    "/user-role-index.c7ad060fec0bd7d87056.hot-update.js": "/user-role-index.c7ad060fec0bd7d87056.hot-update.js",
-    "/user-users-index.a3de9b1e903ade2e90de.hot-update.js": "/user-users-index.a3de9b1e903ade2e90de.hot-update.js",
-    "/user-users-index.c985bbfc304176483b2f.hot-update.js": "/user-users-index.c985bbfc304176483b2f.hot-update.js",
-    "/user-role-index.7c19d6300420ac278d45.hot-update.js": "/user-role-index.7c19d6300420ac278d45.hot-update.js",
-    "/dist/app.57060407a3e434242476.hot-update.js": "/dist/app.57060407a3e434242476.hot-update.js",
-    "/user-permission-form.31f81258aeab8c155697.hot-update.js": "/user-permission-form.31f81258aeab8c155697.hot-update.js",
-    "/user-permission-form.6de296756a370d1d604c.hot-update.js": "/user-permission-form.6de296756a370d1d604c.hot-update.js",
-    "/user-permission-form.82ff4c7644345a4d14d8.hot-update.js": "/user-permission-form.82ff4c7644345a4d14d8.hot-update.js",
-    "/user-permission-form.1395403330d78b55e958.hot-update.js": "/user-permission-form.1395403330d78b55e958.hot-update.js",
-    "/user-permission-form.cbd8c0aab1a08da117f9.hot-update.js": "/user-permission-form.cbd8c0aab1a08da117f9.hot-update.js",
-    "/dist/app.6193bb774d772b154f03.hot-update.js": "/dist/app.6193bb774d772b154f03.hot-update.js",
-    "/user-role-form.9e59bdd40b13c69a2dbf.hot-update.js": "/user-role-form.9e59bdd40b13c69a2dbf.hot-update.js",
-    "/user-role-form.9a9e04c53712b5f29b9f.hot-update.js": "/user-role-form.9a9e04c53712b5f29b9f.hot-update.js",
-    "/user-users-form.ac6033280f6bd1f08cde.hot-update.js": "/user-users-form.ac6033280f6bd1f08cde.hot-update.js",
-    "/user-users-form.437791dffd2fe5b3168f.hot-update.js": "/user-users-form.437791dffd2fe5b3168f.hot-update.js",
-    "/user-role-form.17c9d55d58b30f12c531.hot-update.js": "/user-role-form.17c9d55d58b30f12c531.hot-update.js",
-    "/user-users-form.89b3e62cb402ed4a0144.hot-update.js": "/user-users-form.89b3e62cb402ed4a0144.hot-update.js",
-    "/user-users-view.f7a81a61fcec2ea241f6.hot-update.js": "/user-users-view.f7a81a61fcec2ea241f6.hot-update.js",
-    "/user-users-view.e02df20cff9bc16c1ee4.hot-update.js": "/user-users-view.e02df20cff9bc16c1ee4.hot-update.js",
-    "/user-users-view.760c9a436aa3f26dfaaf.hot-update.js": "/user-users-view.760c9a436aa3f26dfaaf.hot-update.js",
-    "/user-users-view.a86b6df529348affdf06.hot-update.js": "/user-users-view.a86b6df529348affdf06.hot-update.js",
-    "/user-users-view.8a6f388621b40e490924.hot-update.js": "/user-users-view.8a6f388621b40e490924.hot-update.js"
+    "/dist/vuetify.dccb15f4b7ae8fb0258e.hot-update.js": "/dist/vuetify.dccb15f4b7ae8fb0258e.hot-update.js"
 }
