--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /node_modules
 /public/hot
 /public/storage
-/public/dist
+/public/dist/**
 /storage/*.key
 /vendor
 .env
@@ -11,3 +11,4 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+public/mix-manifest.json
